--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required (VERSION 3.5.1)
 project (netwhere)
 
-add_executable(netwhere main.cpp netwhere.cpp)
+add_executable(netwhere main.cpp netwhere.cpp flow_collector.cpp)
 
 target_link_libraries(netwhere PRIVATE tins microhttpd)
 
 target_compile_features(netwhere PUBLIC cxx_auto_type cxx_generalized_initializers)
 
 
-add_executable(netwhere_test netwhere_test.cpp netwhere.cpp)
+add_executable(netwhere_test netwhere_test.cpp netwhere.cpp flow_collector.cpp)
 
 target_compile_features(netwhere_test PUBLIC cxx_auto_type cxx_generalized_initializers)
 
@@ -22,7 +22,7 @@ target_compile_features(auto_dynamic_map_test PUBLIC cxx_auto_type cxx_generaliz
 target_link_libraries(auto_dynamic_map_test PRIVATE boost_unit_test_framework)
 
 
-add_executable(flow_test flow_test.cpp)
+add_executable(flow_test flow_test.cpp flow_collector.cpp)
 
 target_compile_features(flow_test PUBLIC cxx_auto_type cxx_generalized_initializers)
 
