Each host has a counter for bytes in/out.
Also refactoring:
* AutoDynamicMap renamed to ObjectSet and simplified ObjectSet
* Doxygen
* More documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project (netwhere)
 option(BUILD_TESTS
   "Build tests" OFF)
 
+option(BUILD_DOC
+  "Build documentation" ON)
+
 add_executable(netwhere main.cpp netwhere.cpp flow_collector.cpp)
 target_link_libraries(netwhere PRIVATE tins microhttpd)
 target_compile_features(netwhere PUBLIC cxx_auto_type cxx_generalized_initializers)
@@ -17,10 +20,10 @@ if (BUILD_TESTS)
   target_link_libraries(netwhere_test PRIVATE tins microhttpd boost_unit_test_framework)
   add_test(netwhere_test ./netwhere_test)
 
-  add_executable(auto_dynamic_map_test auto_dynamic_map_test.cpp)
-  target_compile_features(auto_dynamic_map_test PUBLIC cxx_auto_type cxx_generalized_initializers)
-  target_link_libraries(auto_dynamic_map_test PRIVATE boost_unit_test_framework)
-  add_test(auto_dynamic_map_test ./auto_dynamic_map_test)
+  add_executable(object_set_test object_set_test.cpp)
+  target_compile_features(object_set_test PUBLIC cxx_auto_type cxx_generalized_initializers)
+  target_link_libraries(object_set_test PRIVATE boost_unit_test_framework)
+  add_test(object_set_test ./object_set_test)
 
 
   add_executable(flow_test flow_test.cpp flow_collector.cpp)
@@ -28,3 +31,20 @@ if (BUILD_TESTS)
   target_link_libraries(flow_test PRIVATE tins boost_unit_test_framework)
   add_test(flow_test ./flow_test)
 endif (BUILD_TESTS)
+
+find_package(Doxygen)
+if (DOXYGEN_FOUND)
+  set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile)
+  set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/docs)
+
+  message("Doxygen build started")
+
+  add_custom_target( doc_doxygen ALL
+    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_IN}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Generating API documentation with Doxygen"
+    VERBATIM )
+
+else (DOXYGEN_FOUND)
+  message("Doxygen need to be installed to generate documentation")
+endif (DOXYGEN_FOUND)
